# oop2020

./: bitbucket-pipelines.yml  index.ipynb
01_platform/03_clion/: index.ipynb
01_platform/04_tests/: index.ipynb
01_platform/04_tests/project/: CMakeLists.txt  main.cpp
01_platform/04_tests/project/tests/: CMakeLists.txt
02_tdd/02_exercise/: index.ipynb
02_tdd/02_exercise/project/include/: RingBuffer.h  TextWrap.h
02_tdd/02_exercise/project/src/: RingBuffer.cpp  TextWrap.cpp
02_tdd/02_exercise/project/tests/src/: RingBufferTest.cpp  TextWrapTest.cpp
03_stl_containers/02_exercise/: index.ipynb
03_stl_containers/02_exercise/project/tests/src/: AssociativeContainersTest.cpp  SequentialContainersTest.cpp
04_stl_benchmark/: index.ipynb
04_stl_benchmark/project/: readme.md
04_stl_benchmark/project/benchmarks/: CMakeLists.txt
04_stl_benchmark/project/benchmarks/src/: LargeBench.cpp  ListBench.cpp  MediumBench.cpp  MultimapBench.cpp  SmallBench.cpp  UnorderedMultimapBench.cpp
04_stl_benchmark/project/include/: Large.h  Medium.h  Small.h
04_stl_benchmark/project/output/: result  resultLarge  resultLargeMultimap  resultLargeUnordered  resultM  resultS
04_stl_benchmark/project/tests/src/: LargeTest.cpp  MediumTest.cpp  SmallTest.cpp
05_design_patterns/02_exercise/: index.ipynb
05_design_patterns/02_exercise/project/: CMakeLists.txt
05_design_patterns/02_exercise/project/include/factory/executor/: AcousticCpuCore.h  AcousticCudaCore.h  AnisotropicCpuCore.h  AnisotropicCudaCore.h  Core.h  CoreFactory.h  CpuCoreFactory.h  CudaCoreFactory.h  Demo.h  ElasticCpuCore.h  ElasticCudaCore.h
05_design_patterns/02_exercise/project/include/factory/gui/: ButtonGnomeWidget.h  ButtonKdeWidget.h  CheckBoxGnomeWidget.h  CheckBoxKdeWidget.h  Demo.h  GnomeWidgetFactory.h  KdeWidgetFactory.h  ListGnomeWidget.h  ListKdeWidget.h  Widget.h  WidgetFactory.h
05_design_patterns/02_exercise/project/include/observer/: Acceleration.h  Displacement.h  Observable.h  Observer.h  Speed.h
05_design_patterns/02_exercise/project/src/factory/executor/: AcousticCpuCore.cpp  AcousticCudaCore.cpp  AnisotropicCpuCore.cpp  AnisotropicCudaCore.cpp  CpuCoreFactory.cpp  CudaCoreFactory.cpp  Demo.cpp  ElasticCpuCore.cpp  ElasticCudaCore.cpp
05_design_patterns/02_exercise/project/src/factory/gui/: ButtonGnomeWidget.cpp  ButtonKdeWidget.cpp  CheckBoxGnomeWidget.cpp  CheckBoxKdeWidget.cpp  Demo.cpp  GnomeWidgetFactory.cpp  KdeWidgetFactory.cpp  ListGnomeWidget.cpp  ListKdeWidget.cpp
05_design_patterns/02_exercise/project/src/observer/: Acceleration.cpp  Displacement.cpp  Observable.cpp  Speed.cpp
05_design_patterns/02_exercise/project/tests/: CMakeLists.txt
05_design_patterns/02_exercise/project/tests/src/: ObserverTest.cpp
06_fake_mock_or_stub/02_exercise/: index.ipynb
06_fake_mock_or_stub/02_exercise/project/: CMakeLists.txt
06_fake_mock_or_stub/02_exercise/project/include/: Observer.h  ObserverImpl.h  Space.h  SpaceImpl.h  Time.h  TimeImpl.h
06_fake_mock_or_stub/02_exercise/project/src/: ObserverImpl.cpp  SpaceImpl.cpp  TimeImpl.cpp
06_fake_mock_or_stub/02_exercise/project/tests/src/: UniverseTest.cpp
07_qt/01_tutorial/: index.ipynb
07_qt/02_exercise/: index.ipynb
07_qt/02_exercise/project/: project.pro
07_qt/02_exercise/project/cli/: cli.pro  main.cpp
07_qt/02_exercise/project/gui/: gui.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
07_qt/02_exercise/project/tests/: tests.pro
07_qt/02_exercise/project/tests/acceleration/: acceleration.pro  tst_accelerationtest.cpp
07_qt/02_exercise/project/tests/displacement/: tst_displacementtest.cpp
07_qt/02_exercise/project/utils/: acceleration.cpp  acceleration.h  displacement.cpp  displacement.h  speed.cpp  speed.h  utils.cpp
08_qt_state_machine/: index.ipynb
08_qt_state_machine/project/: mainwindow.cpp  mainwindow.h
09_qt_qml/: index.ipynb
09_qt_qml/project/: acceleration.cpp  acceleration.h  counter.cpp  counter.h  displacement.cpp  displacement.h  main.cpp  main.qml  project.pro  speed.cpp  speed.h
(+2 files in other folders)
